add kitchen components

--- a/src/components/Kitchen/Kitchen.scss
+++ b/src/components/Kitchen/Kitchen.scss
@@ -98,6 +98,10 @@
   background-image: url('./../../assets/images/images-kitchen-main/sushi-food.jpg');
 }
 
+.kitchen__food-image-6 {
+  background-image: url('./../../assets/images/images-kitchen-main/italian-food.jpg');
+}
+
 .kitchen__food-image__mask {
   position: absolute;
   top: 0;
